[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dynamicprompts"
version = "0.1.17"
description = "Dynamic prompts templating library for Stable Diffusion"
authors = ["Adi Eyal <adi@clearforest.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyparsing = "^3.0.9"
requests = "^2.28.1"
tqdm = "^4.64.1"
spacy = {version = "^3.4.4", optional = true}
transformers = {version = "^4.25.1", optional = true}
torchvision = {version = "^0.14.1", optional = true}
torch = {version = "^1.13.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[tool.poetry.extras]
attentiongrabber = ["spacy"]
magicprompt = ["transformers", "torch", "torchvision"]

[tool.pytest.ini_options]
pythonpath = ["src"]